--- a/template.yml
+++ b/template.yml
@@ -37,17 +37,17 @@ Resources:
           sudo ./install auto
           sudo service codedeploy-agent status
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.2/install.sh | bash
-          export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")"
-          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm
+          export NVM_DIR="\$HOME/.nvm"
+          [ -s "\$NVM_DIR/nvm.sh" ] && \. "\$NVM_DIR/nvm.sh" # This loads nvm
           command -v nvm
           nvm install 12
-          nvm use 12 
+          nvm use 12
           nvm alias default 12
           sudo ln -s $(which node) /usr/bin/
           sudo ln -s $(which npm) /usr/bin/
-          yum install -y httpd
-          systemctl start httpd
-          systemctl enable httpd
+          sudo yum install -y httpd
+          sudo systemctl start httpd
+          sudo systemctl enable httpd
           cd /var/www/html/
           nohup node front-end-server.js > server.log 2>&1 &
       Tags:
