--- a/template.yml
+++ b/template.yml
@@ -37,7 +37,7 @@ Resources:
           sudo ./install auto
           sudo service codedeploy-agent status
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.2/install.sh | bash
-          export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")"
+          export NVM_DIR="$([ -z "\${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "\${XDG_CONFIG_HOME}/nvm")"
           [ -s "\$NVM_DIR/nvm.sh" ] && \. "\$NVM_DIR/nvm.sh" # This loads nvm
           command -v nvm
           nvm install 12
