--- a/template.yml
+++ b/template.yml
@@ -37,7 +37,7 @@ Resources:
           sudo ./install auto
           sudo service codedeploy-agent status
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.2/install.sh | bash
-          export XDG_CONFIG_HOME_VAR="$${XDG_CONFIG_HOME-}"
+          export XDG_CONFIG_HOME_VAR="${XDG_CONFIG_HOME-}"
           command -v nvm
           nvm install 12
           nvm use 12
