--- a/template.yml
+++ b/template.yml
@@ -37,7 +37,8 @@ Resources:
           sudo ./install auto
           sudo service codedeploy-agent status
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.2/install.sh | bash
-          export XDG_CONFIG_HOME_VAR="${XDG_CONFIG_HOME-}"
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm
           command -v nvm
           nvm install 12
           nvm use 12
