--- a/template.yml
+++ b/template.yml
@@ -47,7 +47,8 @@ Resources:
           sudo yum install -y httpd
           sudo systemctl start httpd
           sudo systemctl enable httpd
-          sudo cp -r front-end /var/www/html/ 
+          git clone https://github.com/tidika/AWS_DevSecOps.git /tmp/AWS_DevSecOps
+          sudo cp -r /tmp/AWS_DevSecOps/front-end /var/www/html/ 
           cd /var/www/html/
           nohup node front-end-server.js > server.log 2>&1 &
       Tags:
