--- a/template.yml
+++ b/template.yml
@@ -47,10 +47,10 @@ Resources:
           sudo yum install -y httpd
           sudo systemctl start httpd
           sudo systemctl enable httpd
-          mkdir -p /home/ec2-user/files
+          sudo mkdir -p /home/ec2-user/files
           aws s3 cp s3://tochukwu-idika-s3-bucket/mybuildspec/front-end/files/ /home/ec2-user/files
-          mv /home/ec2-user/files /var/www/html
-          cd /var/www/html/
+          sudo mv /home/ec2-user/files /var/www/html
+          sudo cd /var/www/html/
           nohup node front-end-server.js > server.log 2>&1 &
       Tags:
         - Key: Name
