updated the template

--- a/template.yml
+++ b/template.yml
@@ -46,7 +46,7 @@ Resources:
           sudo systemctl enable httpd
           sudo aws s3 cp s3://tochukwu-idika-s3-bucket/mybuildspec/front-end/files/ /home/ec2-user/files --recursive
           sudo mv /home/ec2-user/files/* /var/www/html
-          nohup node front-end-server.js > server.log 2>&1 &
+          node front-end-server.js
       Tags:
         - Key: Name
           Value: DevServer2  # Replace with your desired instance name
