--- a/template.yml
+++ b/template.yml
@@ -41,14 +41,9 @@ Resources:
           sudo nvm alias default 12
           sudo ln -s $(which node) /usr/bin/
           sudo ln -s $(which npm) /usr/bin/
-          sudo yum install -y httpd
-          sudo systemctl start httpd
-          sudo systemctl enable httpd
           sudo aws s3 cp s3://tochukwu-idika-s3-bucket/mybuildspec/front-end/files/ /home/ec2-user/files --recursive
-          sudo mv /home/ec2-user/files/* /var/www/html
-          cd /var/www/html
-          sudo chmod +x front-end-server.js
-          nohup node front-end-server.js > /var/www/html/server.log 2>&1 &
+          cd files
+          bash start.sh
       Tags:
         - Key: Name
           Value: DevServer  # Replace with your desired instance name
