updated the file.

--- a/template.yml
+++ b/template.yml
@@ -42,6 +42,7 @@ Resources:
           sudo ln -s $(which node) /usr/bin/
           sudo ln -s $(which npm) /usr/bin/
           sudo aws s3 cp s3://tochukwu-idika-s3-bucket/mybuildspec/front-end/files /home/ec2-user/ --recursive
+          sudo mv /home/ec2-user/files/* /home/ec2-user
           chmod +x start.sh
           ./start.sh
       Tags:
