--- a/template.yml
+++ b/template.yml
@@ -41,7 +41,8 @@ Resources:
           sudo nvm alias default 12
           sudo ln -s $(which node) /usr/bin/
           sudo ln -s $(which npm) /usr/bin/
-          sudo aws s3 cp s3://tochukwu-idika-s3-bucket/mybuildspec/front-end/files /home/ec2-user/ --recursive --exclude "files/" --include "*"
+          sudo rm -rf /home/ec2-user/files
+          sudo aws s3 cp s3://tochukwu-idika-s3-bucket/mybuildspec/front-end/files /home/ec2-user --recursive
           cd /home/ec2-user
           chmod +x start.sh
           ./start.sh
