--- a/template.yml
+++ b/template.yml
@@ -43,8 +43,8 @@ Resources:
           sudo ln -s $(which npm) /usr/bin/
           cd /home/ec2-user
           sudo aws s3 cp s3://tochukwu-idika-s3-bucket/mybuildspec/front-end/files /home/ec2-user --recursive
-          chmod +x start.sh
-          bash start.sh
+          sudo rm -rf /home/ec2-user/files
+          node front-end-server.js
       Tags:
         - Key: Name
           Value: DevServer  # Replace with your desired instance name
