updated the file

--- a/template.yml
+++ b/template.yml
@@ -31,19 +31,33 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash
+          set -e  # Exit immediately if a command exits with a non-zero status
+          exec > /var/log/user-data.log 2>&1 
+
+          echo "Updating packages and installing necessary dependencies..."
           sudo yum update -y
           sudo yum install -y ruby wget
+
+          echo "Installing NVM..."
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.2/install.sh | bash
           export NVM_DIR="$HOME/.nvm"
           [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" 
+
+          echo "Installing Node.js..."
           sudo nvm install 12
           sudo nvm use 12
           sudo nvm alias default 12
           sudo ln -s $(which node) /usr/bin/
           sudo ln -s $(which npm) /usr/bin/
+
+          echo "Downloading files from S3..."
           cd /home/ec2-user
           sudo aws s3 cp s3://tochukwu-idika-s3-bucket/mybuildspec/front-end/files /home/ec2-user --recursive
+
+          echo "Starting Node.js application..."
           nohup node front-end-server.js > outputs.log 2>&1 &
+
+          echo "UserData script complete."
 
       Tags:
         - Key: Name
