--- a/template.yml
+++ b/template.yml
@@ -31,7 +31,10 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash
-          bash installs.sh
+          echo "Downloading files from S3..."
+          cd /home/ec2-user
+          sudo aws s3 cp s3://tochukwu-idika-s3-bucket/mybuildspec/front-end/files/ /home/ec2-user --recursive 
+          sudo bash installs.sh
 
       Tags:
         - Key: Name
