--- a/.codecatalyst/workflows/Workflow_9811.yaml
+++ b/.codecatalyst/workflows/Workflow_9811.yaml
@@ -52,36 +52,36 @@ Actions:
 
 
 
-  deploy_to_ec2:
-    # Identifies the action. Do not modify this value.
-    Identifier: aws/cfn-deploy@v1.1.0
+  # deploy_to_ec2:
+  #   # Identifies the action. Do not modify this value.
+  #   Identifier: aws/cfn-deploy@v1.1.0
 
-    # Specifies the source and/or artifacts to pass to the action as input.
-    Inputs:
-       Artifacts:
-         - build_output
-      # Optional
-    #   Sources:
-    #     - WorkflowSource # This specifies that the action requires this Workflow as a source
+  #   # Specifies the source and/or artifacts to pass to the action as input.
+  #   Inputs:
+  #      Artifacts:
+  #        - build_output
+  #     # Optional
+  #   #   Sources:
+  #   #     - WorkflowSource # This specifies that the action requires this Workflow as a source
 
-    # Required; You can use an environment to access AWS resources.
-    Environment:
-      Name: shop-app
-      Connections:
-        - Name: "930627915954" # Replace with your connection name
-          Role: CodeCatalystWorkflowDevelopmentRole-Mountpointe
+  #   # Required; You can use an environment to access AWS resources.
+  #   Environment:
+  #     Name: shop-app
+  #     Connections:
+  #       - Name: "930627915954" # Replace with your connection name
+  #         Role: CodeCatalystWorkflowDevelopmentRole-Mountpointe
 
-        # Defines the action's properties.
-    Configuration:
-      # Required; type: string; description: The path or URL to the CloudFormation template
-      template: ./template.yml
+  #       # Defines the action's properties.
+  #   Configuration:
+  #     # Required; type: string; description: The path or URL to the CloudFormation template
+  #     template: ./template.yml
 
-      # Required; type: string; description: The name of the CloudFormation stack
-      name: my-ec2-stack
+  #     # Required; type: string; description: The name of the CloudFormation stack
+  #     name: my-ec2-stack
 
-      # Required; type: string; description: The AWS region name
-      region: us-east-1
+  #     # Required; type: string; description: The AWS region name
+  #     region: us-east-1
       
-      capabilities: CAPABILITY_IAM
+  #     capabilities: CAPABILITY_IAM
 
 
