--- a/.codecatalyst/workflows/Workflow_9811.yaml
+++ b/.codecatalyst/workflows/Workflow_9811.yaml
@@ -5,7 +5,7 @@ SchemaVersion: "1.0"
 Triggers:
   - Type: Push
     Branches:
-      - main
+      - feature
 
 # Required - Define action configurations.
 Actions:
@@ -20,7 +20,7 @@ Actions:
           Files:
             - '**/*' # Specify the files to include in the artifact
     Environment:
-      Name: shop-app
+      Name: dev
       Connections:
         - Name: "930627915954" # Replace with your connection name
           Role: CodeCatalystWorkflowDevelopmentRole-Mountpointe
