--- a/.codecatalyst/workflows/Workflow_feature.yaml
+++ b/.codecatalyst/workflows/Workflow_feature.yaml
@@ -9,6 +9,7 @@ Triggers:
       - synchronize  # Trigger when the pull request is updated
     Branches:
       - feature
+      - develop
 
 # Required - Define action configurations.ZAs
 Actions:
